--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "moongose": "^1.0.0",
+    "mongoose": "^8.1.1",
     "multer": "^1.4.5-lts.1"
   }
 }
